--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -8,3 +8,8 @@ password=password
 m.password2=repeat password
 m.welcome=Welcome!
 users=Users
+error=Error
+m.error404=Not Found
+m.error404.fun=This is not the web page you are looking for
+m.error422=Unprocessable Entity
+m.error500=Internal Server Error
