--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -5,9 +5,20 @@ surname=surname
 email=email
 role=role
 password=password
+description=description
+viewed=viewed
+accepted=accepted
 m.password2=repeat password
 m.welcome=Welcome!
-users=Users
+menu.login=Login
+menu.register=Register
+menu.home=Home
+menu.users=Users
+menu.requests=Requests
+menu.orders=Orders
+menu.refusals=Refusals
+menu.stages=Repair Stages
+menu.feedback=Feedback
 error=Error
 m.error404=Not Found
 m.error404.fun=This is not the web page you are looking for
