--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -24,3 +24,7 @@ m.error404=Not Found
 m.error404.fun=This is not the web page you are looking for
 m.error422=Unprocessable Entity
 m.error500=Internal Server Error
+action.new.feedback=Leave feedback
+action=action
+text=text
+score=Score
