--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,14 +1,14 @@
 lang.change=Change language
 title=Repair Agency
-name=name
-surname=surname
-email=email
-role=role
-password=password
-description=description
-viewed=viewed
-accepted=accepted
-m.password2=repeat password
+name=Name
+surname=Surname
+email=Email
+role=Role
+password=Password
+description=Description
+viewed=Viewed
+accepted=Accepted
+m.password2=Repeat password
 m.welcome=Welcome!
 menu.login=Login
 menu.register=Register
@@ -25,6 +25,7 @@ m.error404.fun=This is not the web page you are looking for
 m.error422=Unprocessable Entity
 m.error500=Internal Server Error
 action.new.feedback=Leave feedback
-action=action
-text=text
+action=Action
+text=Text
 score=Score
+menu.new.request=New request
