--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -32,3 +32,5 @@ menu.new.request=\u041D\u043E\u0432\u044B\u0439 \u0437\u0430\u043A\u0430\u0437
 client=\u041A\u043B\u0438\u0435\u043D\u0442
 action.accept=\u041F\u0440\u0438\u043D\u044F\u0442\u044C
 action.decline=\u041E\u0442\u043A\u043B\u043E\u043D\u0438\u0442\u044C
+price=\u0426\u0435\u043D\u0430
+masterId=ID \u043C\u0430\u0441\u0442\u0435\u0440\u0430
