add FindAllOrdersCommand for manager

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -35,3 +35,6 @@ action.decline=Decline
 price=Price
 masterId=Master's ID
 explanation=Explanation
+stage=Repair stage
+requestId=Request's ID
+managerId=Manager's ID
