fix untranslated labels

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,5 +1,6 @@
-lang.change=Change language
 title=Repair Agency
+title.login=Login page
+title.registration=Registration page
 name=Name
 surname=Surname
 email=Email
@@ -8,7 +9,6 @@ password=Password
 description=Description
 viewed=Viewed
 accepted=Accepted
-m.password2=Repeat password
 m.welcome=Welcome!
 menu.login=Login
 menu.register=Register
@@ -40,3 +40,4 @@ requestId=Request's ID
 managerId=Manager's ID
 num=#
 stage.name=name
+btn.submit=Submit
