--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -19,6 +19,7 @@ menu.orders=Orders
 menu.refusals=Refusals
 menu.stages=Repair Stages
 menu.feedback=Feedback
+menu.logout=Log out
 error=Error
 m.error404=Not Found
 m.error404.fun=This is not the web page you are looking for
